create swag update
